--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minimal-landing-page",
+  "name": "html_css-93-YuriiM-Owl",
   "private": true,
   "version": "0.0.0",
   "type": "module",
